// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container component matches snapshot 1`] = `
.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  max-width: container;
  margin-left: auto;
  margin-right: auto;
  max-width: 100%;
  margin: 0 auto;
  padding-left: 16px;
  padding-right: 16px;
}

@media screen and (min-width:576px) {
  .emotion-0 {
    max-width: 540px;
  }
}

@media screen and (min-width:768px) {
  .emotion-0 {
    max-width: 720px;
  }
}

@media screen and (min-width:992px) {
  .emotion-0 {
    max-width: 960px;
  }
}

@media screen and (min-width:1200px) {
  .emotion-0 {
    max-width: 1140px;
  }
}

@media screen and (min-width:1400px) {
  .emotion-0 {
    max-width: 1320px;
  }
}

<div>
  <div
    class="emotion-0"
    data-testid="container"
  >
    Container component
  </div>
</div>
`;

exports[`Container component matches snapshot when fluid is true 1`] = `
.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  max-width: container;
  margin-left: auto;
  margin-right: auto;
  margin: 0 auto;
  padding-left: 16px;
  padding-right: 16px;
}

<div>
  <div
    class="emotion-0"
    data-testid="container"
  >
    Container component
  </div>
</div>
`;
